# router/common.go
@@ -10,5 +10,7 @@ func init() {
 	routerhelper.Use(func(r *gin.Engine) {
 		g := routerhelper.NewGroupRouter("common", new(controller.Common), r)
 		g.Get("/get-area-list")
+		g.Post("/mobile-login")
+		g.Post("/mobile-register")
 	})
 }
