# static/swagger/swagger.json
@@ -362,7 +362,7 @@
       "get": {
         "description": "获取区域省市区列表，已归类",
         "tags": [
-          "省市区"
+          "公共"
         ],
         "summary": "获取区域省市区",
         "responses": {
@@ -371,6 +371,76 @@
             "schema": {
               "$ref": "#/definitions/resp"
             }
+          }
+        }
+      }
+    },
+    "/common/mobile-login": {
+      "post": {
+        "description": "根据手机号密码登录",
+        "tags": [
+          "公共"
+        ],
+        "summary": "登录",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "手机号码",
+            "name": "mobile",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "登录密码",
+            "name": "password",
+            "in": "formData",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/resp"
+            }
+          }
+        }
+      }
+    },
+    "/common/mobile-register": {
+      "post": {
+        "description": "根据手机号密码注册",
+        "tags": [
+          "公共"
+        ],
+        "summary": "注册",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "手机号码",
+            "name": "mobile",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "手机验证码， 暂无先使用 0000",
+            "name": "code",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "登录密码",
+            "name": "password",
+            "in": "formData",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功"
           }
         }
       }
